# 3d-christmas-lights

./: CMakeLists.txt  hsv.c  hsv.h  lights.h  main.c
get-3d-positions/: Cargo.toml
get-3d-positions/src/: main.rs
parse-3d-positions/: Cargo.toml  output.csv  visualise.py
parse-3d-positions/src/: main.rs
